[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
common = { path = "../common" }

risc0-zkvm = { version = "0.21.0", features = [ "prove", "std" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = "0.8.5"
ed25519-dalek = { version = "2.1.1", features = ["serde", "signature", "batch", "digest"]}
