[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
common = { path = "../common" }

risc0-zkvm = { version = "1.0.4", features = [ "prove",  "std" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = "0.8.5"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
bincode = "1.3.3"