[package]
name = "payment_l2"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std" ]}
common = { path = "../../common" }

[patch.crates-io]
### Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
### multiplication accelerator support for all downstream usages of the following crates.
###sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.release]
codegen-units = 1
lto = "thin"